@@ -1,5 +1,6 @@
+/* global wc_stripe_settings_params */
 import { __ } from '@wordpress/i18n';
-import React from 'react';
+import React, { useContext, useState } from 'react';
 import { ExternalLink } from '@wordpress/components';
 import SettingsSection from '../settings-section';
 import PaymentRequestSection from '../payment-request-section';
@@ -7,6 +8,9 @@ import GeneralSettingsSection from '../general-settings-section';
 import LoadableSettingsSection from '../loadable-settings-section';
 import CustomizationOptionsNotice from '../customization-options-notice';
 import DisplayOrderCustomizationNotice from '../display-order-customization-notice';
+import PromotionalBannerSection from 'wcstripe/settings/payment-settings/promotional-banner-section';
+import UpeToggleContext from 'wcstripe/settings/upe-toggle/context';
+import { useAccount } from 'wcstripe/data/account';
 
 const PaymentMethodsDescription = () => {
 	return (
@@ -46,8 +50,32 @@ const PaymentRequestDescription = () => (
 );
 
 const PaymentMethodsPanel = ( { onSaveChanges } ) => {
+	const [ showPromotionalBanner, setShowPromotionalBanner ] = useState(
+		true
+	);
+	const { isUpeEnabled, setIsUpeEnabled } = useContext( UpeToggleContext );
+	const { data } = useAccount();
+	const isTestModeEnabled = Boolean( data.testmode );
+	const oauthConnected = isTestModeEnabled
+		? data?.oauth_connections?.test
+		: data?.oauth_connections?.live;
+
 	return (
 		<>
+			{ showPromotionalBanner && (
+				<SettingsSection>
+					<PromotionalBannerSection
+						setShowPromotionalBanner={ setShowPromotionalBanner }
+						isUpeEnabled={ isUpeEnabled }
+						setIsUpeEnabled={ setIsUpeEnabled }
+						isConnectedViaOAuth={ oauthConnected }
+						oauthUrl={ wc_stripe_settings_params.stripe_oauth_url }
+						testOauthUrl={
+							wc_stripe_settings_params.stripe_test_oauth_url
+						}
+					/>
+				</SettingsSection>
+			) }
 			<SettingsSection Description={ PaymentMethodsDescription }>
 				<DisplayOrderCustomizationNotice />
 				<GeneralSettingsSection onSaveChanges={ onSaveChanges } />
