@@ -1,3 +1,4 @@
+/* global wc_stripe_settings_params */
 import { __ } from '@wordpress/i18n';
 import { React, useContext, useState } from 'react';
 import { ExternalLink } from '@wordpress/components';
@@ -13,6 +14,7 @@ import './style.scss';
 import LoadableAccountSection from 'wcstripe/settings/loadable-account-section';
 import PromotionalBannerSection from 'wcstripe/settings/payment-settings/promotional-banner-section';
 import UpeToggleContext from 'wcstripe/settings/upe-toggle/context';
+import { useAccount } from 'wcstripe/data/account';
 
 const GeneralSettingsDescription = () => (
 	<>
@@ -75,6 +77,11 @@ const PaymentSettingsPanel = () => {
 		true
 	);
 	const { isUpeEnabled, setIsUpeEnabled } = useContext( UpeToggleContext );
+	const { data } = useAccount();
+	const isTestModeEnabled = Boolean( data.testmode );
+	const oauthConnected = isTestModeEnabled
+		? data?.oauth_connections?.test
+		: data?.oauth_connections?.live;
 
 	const handleModalDismiss = () => {
 		setModalType( '' );
@@ -102,6 +109,13 @@ const PaymentSettingsPanel = () => {
 								}
 								isUpeEnabled={ isUpeEnabled }
 								setIsUpeEnabled={ setIsUpeEnabled }
+								isConnectedViaOAuth={ oauthConnected }
+								oauthUrl={
+									wc_stripe_settings_params.stripe_oauth_url
+								}
+								testOauthUrl={
+									wc_stripe_settings_params.stripe_test_oauth_url
+								}
 							/>
 						</LoadableAccountSection>
 					</LoadableSettingsSection>
